k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bould-d
  labels:
    app: bould
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bould
  template:
    metadata:
      labels:
        app: bould
    spec:
      imagePullSecrets:
      - name: regcrednheek
      containers:
      - name: bould
        image: reg.nheek.com/nheek/bould:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "40Mi"
          limits:
            memory: "70Mi"
