k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bould-service
  labels:
    app: bould
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: bould
